[project]
name = "responseSpectrum"
version = "0.1.0"
description = "Tools for handling earthquake response spectra"
authors = [
    { name = "Nicolas Mora Bowen", email = "nmorabowen@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
